--- a/style.css
+++ b/style.css
@@ -12,19 +12,19 @@ body {
 }
 
 h1 {
-    font-family: BEBAS NEUE;
+    font-family: 'BEBAS NEUE', sans-serif;
     font-size: 48px;
     line-height: 130%;
 }
 
 h2 {
-    font-family: BEBAS NEUE;
+    font-family: 'BEBAS NEUE', sans-serif;
     font-size: 38px;
     line-height: 130%;
 }
 
 h3 {
-    font-family: BEBAS NEUE;
+    font-family: 'BEBAS NEUE', sans-serif;
     font-size: 24px;
     line-height: 150%;
 }
@@ -63,7 +63,7 @@ header {
     display: flex;
     flex-direction: row; 
     justify-content: space-between;
-    max-width: 1100px;
+    max-width: 1135px;
     margin: auto;
 }
 
@@ -117,8 +117,8 @@ header {
     color: var(--white);
     background-color: var(--prime);
     padding: 10px 15px;
-    border: none;
     border-radius: 5px;
+    border: none;
 }
 
 /*----image-container----*/
@@ -129,22 +129,18 @@ header {
     justify-content: center;
     background-size: cover;
     align-items: center;
-    /*----How to make only the background darker?----*/
-    filter: brightness(80%);
-    /*-----------------------------------------------*/
     color: var(--white);
     height: 300px;
     width: 100%;   
 }
 
 .hero-container h3 {
-    transform: scaleY(1.8);
-    font-family: sans-serif;
-    font-size: 22px;
+    transform: scale(0.9, 1.5);
 }
 
 .home-image {
     background-image: url(./Fietsenmaker/Images/home-hero.jpg);
+    background-size: cover;
 }
 
 /*----Footer----*/
@@ -170,7 +166,7 @@ footer {
     flex-direction: row; 
     justify-content: space-between;
     height: 3.6em;
-    width: 1100px;
+    width: 1135px;
     margin: auto;
 }
 
@@ -217,7 +213,7 @@ footer {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    padding: 70px 50px 70px 50px;
+    padding: 70px 40px 70px 40px;
 }
 
 .bezorging,
@@ -228,7 +224,7 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 70px 50px 70px 50px;
+    padding: 70px 40px 70px 40px;
 }
 
 .klant i,
@@ -238,7 +234,7 @@ footer {
     font-size: 22px;
     color: var(--white);
     background-color: var(--sec);
-    padding: 14px;
+    padding: 15px;
     border-radius: 100%;
     margin: 0px 15px 15px 15px;
 }
@@ -249,9 +245,9 @@ footer {
 .tijdsopgaven h5 {
     font-family: sans-serif;
     color: var(--prime);
-    transform: scale(0.75, 1.4);
+    transform: scale(0.7, 1.4);
     font-size: 14px;
-    font-weight: bolder;
+    font-weight: 800;
     margin: 0px;
 }
 
@@ -260,8 +256,8 @@ footer {
 .prijs p,
 .tijdsopgaven p {
     text-align: center;
-    font-size: 15px;
-    margin: 10px 0px 0px 0px;
+    font-size: 16px;
+    margin: 20px;
 }
 
 .uitleg {
@@ -269,7 +265,7 @@ footer {
     justify-content: center;
     align-content: center;
     padding: 50px 0px 50px 0px;
-    gap: 10px;
+    gap: 25px;
     background-color: var(--sec-grey);
 
 }
@@ -278,27 +274,112 @@ footer {
     font-family: sans-serif;
     color: var(--prime);
     transform: scale(1, 1.4);
-    font-size: 15px;
+    font-size: 12px;
     font-weight: bolder;
-    margin: 5px 0px 0px 0px;
+    margin: 10px 0px 0px 0px;
 }
 
 .uitleg .tekst p {
-    max-width: 465px;
+    max-width: 490px;
 }
 
 .uitleg .image img {
-    height: 380px;
-    width: 550px;
+    height: 390px;
+    width: 580px;
 }
 
 /*----Store-page----*/
 
+.winkel-producten {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 25px auto;
+}
 
+.mountain-bike,
+.bmx-fiets,
+.vouwfiets,
+.bromfiets {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid 4px var(--sec-grey);
+    margin: 25px auto;
+}
+
+.mountain-bike .icon i,
+.bmx-fiets .icon i,
+.vouwfiets .icon i,
+.bromfiets .icon i {
+    font-size: 22px;
+    color: var(--white);
+    background-color: var(--sec);
+    padding: 15px;
+    border-radius: 100%;
+    margin: 0px 25px 25px 25px;
+}
+
+.product-info h4 {
+    font-family: 'BEBAS NEUE', sans-serif;
+    font-size: 11px;
+    font-weight: 800;
+    color: var(--prime);
+    transform: scaleY(1.8);
+}
+
+.product-info h5 {
+    font-family: 'BEBAS NEUE', sans-serif;
+    font-weight: 300;
+    color: var(--prime);
+    font-size: 14px;
+}
+
+.mountain-bike .info-button button,
+.bmx-fiets .info-button button,
+.vouwfiets .info-button button,
+.bromfiets .info-button button {
+    font-family: 'BEBAS NEUE';
+    color: var(--white);
+    background-color: var(--prime);
+    padding: 10px 50px;
+    border-radius: 5px;
+    border: none;
+    margin: 0px 20px 20px 75px;
+}
 
 /*----Reparation-page----*/
 
+.contact-info {
+    display: flex;
+    justify-content: center;
+    max-width: 1135px;
+}
 
+.contactformulier {
+    display: flex;
+}
+
+#fname,
+#lname {
+    width: 49%;
+}
+
+#company {
+    width: 100%;
+}
+
+
+
+.algemene-info {
+    height: 400px;
+    width: 20%;
+    background-color: var(--prime);
+    color: var(--white);
+}
+
+/*----Media-Query----*/
 
 @media only screen and (max-width: 600px) {
 
