--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
     margin: 0;
+    padding: 0;
 }
 
 h1 {
@@ -235,7 +236,7 @@ footer {
     color: var(--white);
     background-color: var(--sec);
     padding: 15px;
-    border-radius: 100%;
+    border-radius: 50%;
     margin: 0px 15px 15px 15px;
 }
 
@@ -263,7 +264,6 @@ footer {
 .uitleg {
     display: flex;
     justify-content: center;
-    align-content: center;
     padding: 50px 0px 50px 0px;
     gap: 25px;
     background-color: var(--sec-grey);
@@ -279,13 +279,14 @@ footer {
     margin: 10px 0px 0px 0px;
 }
 
-.uitleg .tekst p {
+.tekst p {
     max-width: 490px;
 }
 
-.uitleg .image img {
+.image img {
     height: 390px;
     width: 580px;
+    background-size: cover;
 }
 
 /*----Store-page----*/
@@ -317,7 +318,7 @@ footer {
     color: var(--white);
     background-color: var(--sec);
     padding: 15px;
-    border-radius: 100%;
+    border-radius: 50%;
     margin: 0px 25px 25px 25px;
 }
 
@@ -351,36 +352,235 @@ footer {
 
 /*----Reparation-page----*/
 
-.contact-info {
+.contact-box {
     display: flex;
-    justify-content: center;
+    margin: 80px auto;
     max-width: 1135px;
 }
 
-.contactformulier {
+.contact-container {
+    margin-top: 20px;
+    width: 70%;
+}
+
+form {
     display: flex;
+    flex-direction: column;
+    width: 90%;
+
 }
 
-#fname,
-#lname {
-    width: 49%;
+form textarea {
+    margin-bottom: 10px;
 }
 
-#company {
+.voornaam,
+.achternaam,
+.emailveld {
     width: 100%;
 }
 
+.info-box {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 10px;   
+}
 
+.input-container {
+    position: relative;
+    padding-left: 30px;
+    padding-bottom: 10px;
+}
+
+input[type="radio"] {
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    opacity: 0;
+    margin: 0;
+}
+
+input[type="radio"]:checked ~ .checkmark {
+    background-color: var(--prime);   
+}
+
+input[type="radio"]:checked ~ .checkmark:after {
+    background-color: var(--white);
+}
+
+.checkmark {
+    display: block;
+    position: absolute;
+    top: 0;
+    Left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: var(--grey);
+    border-radius: 50%;
+}
+
+.checkmark:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    Left: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: var(--grey);
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+}
+
+input#achternaam,
+input#voornaam {
+    background-color: var(--sec-grey);
+    width: calc(100% - 4px);
+    height: 35px;
+    text-indent: 10px;
+    border: none;
+    border-bottom: 2px solid var(--prime);
+    margin-bottom: 10px;
+}
+
+input#email {
+    border: none;
+    border-bottom: 2px solid var(--prime);
+    background-color: var(--sec-grey);
+    height: 30px;
+    width: 100%;
+    text-indent: 10px;
+    margin-bottom: 20px;
+}
+
+input#bedrijfsnaam {
+    border: none;
+    border-bottom: 2px solid var(--prime);
+    background-color: var(--sec-grey);
+    height: 30px;
+    text-indent: 10px;
+    margin-bottom: 20px;
+}
+
+input#datum {
+    border: none;
+    font-family: 'Open Sans', sans-serif;
+    border-bottom: 2px solid var(--prime);
+    background-color: var(--sec-grey);
+    height: 30px;
+    width: 100%;
+    text-indent: 5px;
+    margin-bottom: 20px;
+    color: var(--grey);    
+}
+
+textarea#opmerking.form-control {
+    height: 120px;
+    background-color: var(--sec-grey);
+    color: var(--gray-color);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid var(--prime);
+    margin-bottom: 20px;
+    padding: 10px 10px;
+    opacity: 0.75;
+}
+
+::placeholder {
+    color: var(--grey);
+}
+
+.reparatielabel {
+    margin-bottom: 10px;
+}
+
+.send-button {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.send {
+    color: var(--white);
+    background-color: var(--prime);
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+}
 
 .algemene-info {
-    height: 400px;
-    width: 20%;
+    padding-top: 20px;
+    padding-left: 25px;
+    height: 375px;
+    width: 30%;
+    border-radius: 3.5%;
     background-color: var(--prime);
     color: var(--white);
+    text-align: left;
+}
+
+.algemene-info h5 {
+    font-family: 'BEBAS NEUE', sans-serif;
+    margin: 15px 0px;
+    transform: scaleY(1.4);
+}
+
+.algemene-info p {
+    margin: 10px 0px;
+    line-height: normal;
+}
+
+table {
+    font-family: 'BEBAS NEUE', sans-serif;
+    margin-left: 0px;
+    margin-right: auto;
 }
 
 /*----Media-Query----*/
 
 @media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 28px;
+    }
 
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    p {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    .header-width h3 {
+        margin: 0px 10px;
+    }
+
+    .header-width nav,
+    .link-rep-pagina {
+        visibility: hidden;
+    }
+
+    .hero-container {
+        text-align: center;
+    }
+
+    .uitleg {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .image img {
+        display: flex;
+        justify-content: center;
+        background-size: cover;
+    }
+
+    .tekst {
+        max-width: 85%;
+    }
 }
