--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     --primary: #D8BC69;
     --prim-dark: #bf9d39;
     --text: #1e1e20;
-    --white: #FFFFFF;   
+    --white: #FFFFFF; 
+    --grey: #EEE;  
 }
 
 body {
@@ -493,12 +494,12 @@ form {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: calc(100% - 4px);
 }
 
 .submit-button {
     display: flex;
     justify-content: flex-end;
+    width: calc(100% - 10px);
 }
 
 .validation-button {
@@ -511,11 +512,22 @@ form {
     cursor: pointer;
 }
 
+.name,
+.email,
+.phonenumber {
+    width: calc(100% - 4px);
+    margin-right: 15px;
+}
+
 input#name,
 input#email,
 input#phone {
+    background-color: var(--grey);
+    border: 2px solid var(--primary);
+    height: 30px;
     width: calc(100% - 4px);
-    margin: 20px auto;
+    text-indent: 10px;
+    margin-bottom: 20px;
 }
 
 label {
@@ -523,24 +535,27 @@ label {
 }
 
 input {
-    font-size: 35px;
     border: 2px solid var(--primary);
     background-color: #f1f1f1;
     margin: 15px 0px 30px 0px;
 }
 
 textarea {
-    font-size: 14px;
-    width: 100%;
+    height: 120px;
+    background-color: var(--grey);
+    border: none;
+    outline: none;
     border: 2px solid var(--primary);
-    background-color: #f1f1f1;
-    margin: 10px 0px 25px 0px;
+    margin-bottom: 20px;
+    padding: 10px 10px;
+    opacity: 0.75;
 }
 
 .message {
     height: 100px;
     width: 450px;
 }
+
 /*------------------------------------------------------------*/
 @media only screen and (max-width: 600px) {
     .contact-information {
