8th commit - tiny change

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ header {
     background-color: var(--prime);
     padding: 10px 15px;
     border-radius: 5px;
+    cursor: pointer;
     border: none;
 }
 
