--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ h3 {
     line-height: 150%;
 }
 
+h4 {
+    font-family: 'BEBAS NEUE', sans-serif;
+}
+
+h5 {
+    font-family: 'BEBAS NEUE', sans-serif;
+}
+
 p {
     font-family: 'Open Sans';
     font-size: 16px;
@@ -38,6 +46,10 @@ p {
 }
 
 /*------Combined-overlay------*/
+
+.container-padding {
+    padding: 20px;
+}
 
 /*----Header----*/
 
@@ -65,6 +77,7 @@ header {
     display: flex;
     flex-direction: row; 
     justify-content: space-between;
+    padding: 5px;
     max-width: 1135px;
     margin: auto;
 }
@@ -72,11 +85,10 @@ header {
 .header-width h3 {
     display: flex;
     align-items: center;
-    font-family: 'Franklin Gothic Medium';
+    justify-content: center;
     color: var(--prime);
     cursor: pointer;
     transform: scaleY(1.5);
-    margin: 15px 0px 15px 0px;
 }
 
 .header-width h3 span {
@@ -86,7 +98,7 @@ header {
 .header-width nav ul {
     display: flex;
     flex-direction: row;
-    padding: 0px 25px 0px 0px;
+    padding: 5px 25px 0px 0px;
 }
 
 .header-width li {
@@ -145,6 +157,7 @@ header {
 /*----Footer----*/
 
 footer {
+    bottom: 0;
     color: var(--white);
     background-color: var(--prime);
     width: 100%;
@@ -164,6 +177,7 @@ footer {
     flex-direction: row; 
     justify-content: space-between;
     height: 3.6em;
+    bottom: 0;
     max-width: 1135px;
     margin: auto;
 }
@@ -218,12 +232,12 @@ footer {
     /*----Header-----*/
 
     .header-width h3 {
-        margin: 0px 10px;
+        width: fit-content;
     }
 
     .header-width nav,
     .link-rep-pagina {
-        visibility: hidden;
+        display: none;
     }
 
     .hero-container {
@@ -238,9 +252,7 @@ footer {
         justify-content: center;
         align-items: center;
         height: 5.8em;
-        max-width: 1135px;
         gap: 5px;
-        bottom: 0;
         margin: 0px auto;
     }
 }
@@ -252,8 +264,9 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 40px;
     max-width: 1135px;
-    margin: 0px auto;
+    margin: 50px auto;
 }
 
 .klant {
@@ -262,24 +275,23 @@ footer {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    padding: 70px 45px;
 }
 
-.bezorging,
-.prijs,
-.tijdsopgaven {
+.row {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 70px 45px;
+}
+
+.klant span,
+.row span {
+    color: var(--prime);
 }
 
 .klant i,
-.bezorging i,
-.prijs i,
-.tijdsopgaven i {
+.row i {
     font-size: 22px;
     color: var(--white);
     background-color: var(--sec);
@@ -289,9 +301,7 @@ footer {
 }
 
 .klant h5,
-.bezorging h5,
-.prijs h5,
-.tijdsopgaven h5 {
+.row h5 {
     font-family: sans-serif;
     color: var(--prime);
     transform: scale(0.7, 1.4);
@@ -301,20 +311,24 @@ footer {
 }
 
 .klant p,
-.bezorging p,
-.prijs p,
-.tijdsopgaven p {
+.row p {
     text-align: center;
     font-size: 16px;
     margin: 20px auto;
 }
 
+.container-overlay {
+    background-color: var(--sec-grey);
+    padding: 50px 0px;
+}
+
 .uitleg {
     display: flex;
     justify-content: center;
-    padding: 50px 0px;
+    padding: 10px;
+    max-width: 1135px;
     gap: 25px;
-    background-color: var(--sec-grey);
+    margin: 0px auto;
 }
 
 .tekst h5 {
@@ -332,7 +346,7 @@ footer {
 
 .image img {
     height: 390px;
-    width: 580px;
+    max-width: 580px;
     background-size: cover;
 }
 
@@ -346,9 +360,7 @@ footer {
     }
 
     .klant,
-    .bezorging,
-    .prijs,
-    .tijdsopgaven {
+    .row {
         padding: 30px 45px;
     }
 
@@ -461,8 +473,9 @@ footer {
 
 .contact-box {
     display: flex;
-    margin: 80px auto;
     max-width: 1135px;
+    gap: 40px;
+    margin: 80px auto;
 }
 
 .contact-container {
@@ -473,7 +486,7 @@ footer {
 form {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
 
 }
 
@@ -612,15 +625,20 @@ textarea#opmerking.form-control {
     color: var(--white);
     background-color: var(--prime);
     padding: 10px 20px;
+    cursor: pointer;
     border-radius: 10px;
     border: none;
+}
+
+input[type="submit"] {
+    margin: 0;
 }
 
 .algemene-info {
     padding-top: 20px;
     padding-left: 25px;
     height: 375px;
-    width: 30%;
+    width: 32.5%;
     border-radius: 3.5%;
     background-color: var(--prime);
     color: var(--white);
